# head_soccer

./: CMakeLists.txt  README.md  README.txt
include/: Board.h  CMakeLists.txt  Collision.hpp  CollisionHandling.h  Controller.h  Direction.h  Factory.h  Game_clock.h  Menu.h  Object.h  ScoreAnimation.h  ScoreBoard.h  Sounds_E.h  macros.h
include/All_animation/: Animation.h  AnimationData.h  Resources.h  Textures.h
include/Moving_Objects/: Ball.h  MovingObject.h
include/Moving_Objects/Players/: Chicken.h  Footballplayer.h  Nerd.h  Player.h  Santa.h
include/Static_Objects/: Foot.h  Goal.h  StaticObject.h  yeti.h
resources/: CMakeLists.txt  map.txt
src/: Animation.cpp  Ball.cpp  Board.cpp  CMakeLists.txt  Collision.cpp  CollisionHandling.cpp  Controller.cpp  Direction.cpp  Factory.cpp  Foot.cpp  Game_clock.cpp  Goal.cpp  Menu.cpp  MovingObject.cpp  Object.cpp  Player.cpp  Resources.cpp  Santa.cpp  ScoreAnimation.cpp  ScoreBoard.cpp  Sounds_E.cpp  StaticObject.cpp  Textures.cpp  Yeti.cpp  main.cpp
